prjs dark mode filter fixed & mobile btn w

--- a/css/base/mobile-nav-button.css
+++ b/css/base/mobile-nav-button.css
@@ -1,7 +1,7 @@
 :root {
 --time: 0.1s;
 
-	--width: 40px;
+	--width: 30px;
 	--height: 30px;
 
 	--line-height: 2px;
